--- a/CollectionAndTable/Base.lproj/Main.storyboard
+++ b/CollectionAndTable/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="160" id="YCF-jC-lC8" customClass="TableViewCell" customModule="CollectionAndTable" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCell" rowHeight="160" id="YCF-jC-lC8" customClass="TableViewCell" customModule="CollectionAndTable" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="160"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YCF-jC-lC8" id="3Nq-0m-CPq">
@@ -26,15 +26,14 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ynw-j2-jGG">
-                                            <rect key="frame" x="10" y="10" width="355" height="21"/>
+                                            <rect key="frame" x="10" y="10" width="355" height="19.5"/>
                                             <color key="backgroundColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="srb-eF-x3w">
+                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="srb-eF-x3w">
                                             <rect key="frame" x="10" y="39" width="355" height="110"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="twQ-az-xjw">
                                                 <size key="itemSize" width="50" height="50"/>
@@ -43,7 +42,7 @@
                                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             </collectionViewFlowLayout>
                                             <cells>
-                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="5Ic-dO-jpE">
+                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="5Ic-dO-jpE">
                                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -58,9 +57,15 @@
                                     <constraints>
                                         <constraint firstItem="Ynw-j2-jGG" firstAttribute="leading" secondItem="3Nq-0m-CPq" secondAttribute="leading" constant="10" id="5Bn-w9-B4G"/>
                                         <constraint firstItem="Ynw-j2-jGG" firstAttribute="top" secondItem="3Nq-0m-CPq" secondAttribute="top" constant="10" id="gFi-mT-Qu2"/>
+                                        <constraint firstAttribute="bottom" secondItem="Ynw-j2-jGG" secondAttribute="bottom" constant="130" id="hiY-aa-T2B"/>
                                         <constraint firstAttribute="trailing" secondItem="Ynw-j2-jGG" secondAttribute="trailing" constant="10" id="nJh-uG-mAD"/>
+                                        <constraint firstItem="srb-eF-x3w" firstAttribute="top" secondItem="Ynw-j2-jGG" secondAttribute="bottom" constant="10" id="wEA-KI-v15"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="CollectionView" destination="srb-eF-x3w" id="2WN-YG-jE9"/>
+                                    <outlet property="LabelText" destination="Ynw-j2-jGG" id="DgF-qT-CsN"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
